# clawspec

./: .gitignore  README.md  pyproject.toml
example/: PROJECT.md
example/specs/: auth.md  tasks.md
example/src/: package.json  tailwind.config.ts
example/src/src/app/: globals.css
example/src/src/components/: AuthGuard.tsx  Navbar.tsx  TaskCard.tsx
example/src/src/contexts/: AuthContext.tsx
example/src/src/lib/: firebase.ts
example/src/src/services/: auth.ts  tasks.ts  users.ts
example/src/src/types/: task.ts  user.ts
src/clawspec/: __init__.py  checker.py  cli.py  generator.py  git.py  parser.py  planner.py  tracker.py
src/clawspec/backends/: __init__.py  claude_agent.py
